--- a/design/src/main/res/values/dimens.xml
+++ b/design/src/main/res/values/dimens.xml
@@ -84,4 +84,7 @@
     <!-- Logcat Design -->
     <dimen name="logcat_padding_vertical">12dp</dimen>
     <dimen name="logcat_padding_horizontal">12dp</dimen>
+
+    <!-- Auto Switch Design -->
+    <dimen name="auto_switch_candidate_spacing">12dp</dimen>
 </resources>
